Part1/ex1-10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: {}
      containers:
        - name: log-output-endpoint
          image: irmindev/exercise-1-1:latest
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
          ports:
            - containerPort: 3000
        - name: log-output-writer
          image: irmindev/log-output-writer:latest
          imagePullPolicy: IfNotPresent
          volumeMounts: # Mount volume
          - name: shared-image
            mountPath: /usr/src/app/files
          ports:
            - containerPort: 3001
